# vibe

./: .gitmodules  Cargo.toml  build.rs  readme.md
.github/workflows/: release.yml
src/: aiexclude_mounts.sh  main.rs  networking.rs  provision.sh  vm_registry.rs
