[package]
name = "vibe"
version = "0.1.0"
edition = "2024"

[dependencies]
objc2 = "*"
objc2-foundation = { version = "*", features = [
    "NSArray",
    "NSString",
    "NSURL",
    "NSError",
    "NSFileHandle",
    "NSData",
    "NSDate",
    "NSRunLoop",
    "NSObject",
] }
objc2-virtualization = "*"
block2 = "*"
dispatch2 = "*"
libc = "*"
lexopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
